Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextObjIntObj.quorum
class Main
    action Main
        Text v
        v:SetValue(Test())
    end

    action Test() returns Text
        Integer var
        var:SetValue(5)
        return var
    end
end